# lighthouse

./: Cargo.toml  Dockerfile  Makefile
.github/workflows/: docker.yml  publish-crate.yml  release.yml  test-docker.yml  test-suite.yml  test.yml
account_manager/src/wallet/: create.rs
beacon_node/: Cargo.toml
beacon_node/beacon_chain/: Cargo.toml
beacon_node/beacon_chain/src/: beacon_chain.rs  beacon_snapshot.rs  builder.rs  head_tracker.rs  naive_aggregation_pool.rs  observed_attestations.rs  observed_attesters.rs  observed_block_producers.rs  observed_operations.rs  shuffling_cache.rs  snapshot_cache.rs  timeout_rw_lock.rs  validator_pubkey_cache.rs
beacon_node/client/: Cargo.toml
beacon_node/client/src/: builder.rs
beacon_node/eth1/: Cargo.toml
beacon_node/eth2-libp2p/: Cargo.toml
beacon_node/eth2-libp2p/src/: behaviour.rs  service.rs
beacon_node/eth2_libp2p/: Cargo.toml
beacon_node/http_api/: Cargo.toml
beacon_node/http_api/src/: lib.rs  sync_committees.rs
beacon_node/http_api/tests/: tests.rs
beacon_node/http_metrics/src/: lib.rs  metrics.rs
beacon_node/http_metrics/tests/: tests.rs
beacon_node/network/: Cargo.toml
beacon_node/network/src/: service.rs
beacon_node/operation_pool/: Cargo.toml
beacon_node/operation_pool/src/: attestation_id.rs  lib.rs
beacon_node/src/: lib.rs
beacon_node/store/: Cargo.toml
beacon_node/store/src/: config.rs  hot_cold_store.rs  leveldb_store.rs  lib.rs  memory_store.rs  partial_beacon_state.rs
book/: README.md
book/src/: api-lighthouse.md  api-vc-endpoints.md  become-a-validator-source.md  docker.md  key-management.md  pi.md
common/eth2/: Cargo.toml
common/eth2/src/: lib.rs  lighthouse.rs  types.rs
common/warp_utils/: Cargo.toml
consensus/cached_tree_hash/: Cargo.toml
consensus/fork_choice/: Cargo.toml
consensus/mem_util/: Cargo.toml
consensus/mem_util/src/: ethereum_impls.rs  impls.rs  lib.rs  malloc_size.rs  primitives_impls.rs
consensus/mem_util_derive/: Cargo.toml
consensus/mem_util_derive/src/: lib.rs
consensus/proto_array/: Cargo.toml
consensus/tree_hash/: Cargo.toml
consensus/types/: Cargo.toml
lcli/: Cargo.toml
lighthouse/: Cargo.toml
lighthouse/src/: main.rs
scripts/local_testnet/: setup.sh  vars.env
testing/eth1_test_rig/: Cargo.toml
validator_client/: Cargo.toml
validator_client/src/: cli.rs  config.rs  sync_committee_service.rs  validator_store.rs
(+68 files in other folders)
