[package]
name = "eth1_test_rig"
version = "0.2.0"
authors = ["Paul Hauner <paul@paulhauner.com>"]
edition = "2018"

[dependencies]
tokio = { version = "1.1.0", features = ["time"] }
tokio-compat-02 = "0.1"
web3 = { git = "https://github.com/tomusdrw/rust-web3.git", rev = "509b3bb0833e9c8e4d0e6afad4d349c4dc36b08c", default-features = false, features = ["http-rustls"] }
futures = "0.3.7"
types = { path = "../../consensus/types"}
serde_json = "1.0.58"
deposit_contract = { path = "../../common/deposit_contract"}
